--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ input[type="date"] {
     background-color: rgba(185, 177, 219, 0.445);  
     border: 1px solid grey;
     margin: 5px;
-    padding; 20px;
+    padding: 6px;
     
 }
 
